--- a/daw/proUno/programUno.html
+++ b/daw/proUno/programUno.html
@@ -93,17 +93,33 @@
     </article>
     <h4 class="subTitulo_4">Debemos usar una serie de símbolos:</h4>
     <article>
-      <ul>
-        <li><b>Rectángulo esquinas redondas:</b> Indican inicio o fin de programa.</li>
-        <li><b>Rectángulo:</b> Representan una instrucción, un paso a dar o un proceso.</li>
-        <li><b>Paralelogramo:</b> Operaciones de entrada/salida de datos.</li>
-        <li><b>Rombo:</b> Usaremos este símbolo si nos encontramos en un punto en el
-          que se realizará una u otra acción en función de una decisión.</li>
-        <li><b>Circulo:</b> Conector. Permite unir diferentes zonas del diagrama de
-          forma que se redefine el flujo de ejecución hacia otra parte
-          del diagrama.</li>
-        <li><b>Flechas:</b> para indicar la dirección de flujo.</li>
-      </ul>
+      <p>
+        <b>Rectángulo esquinas redondas:</b> Indican inicio o fin de programa.
+        <img src="../../img/rectanguloR.png">
+      </p><br>
+      <p>
+        <b>Rectángulo:</b> Representan una instrucción, un paso a dar o un proceso.
+        <img src="../../img/rectangulo.png">
+      </p><br>
+      <p>
+        <b>Paralelogramo:</b> Operaciones de entrada/salida de datos.
+        <img src="../../img/paralelo.png">
+      </p><br>
+      <p>
+        <b>Rombo:</b> Usaremos este símbolo si nos encontramos en un punto en el
+        que se realizará una u otra acción en función de una decisión.
+        <img src="../../img/rombo.png">
+      </p><br>
+      <p>
+        <b>Circulo:</b> Conector. Permite unir diferentes zonas del diagrama de
+        forma que se redefine el flujo de ejecución hacia otra parte
+        del diagrama.
+        <img src="../../img/circulo.png">
+      </p><br>
+      <p>
+        <b>Flechas:</b> para indicar la dirección de flujo.
+        <img src="../../img/flechas.png">
+      </p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
