--- a/daw/proUno/proDos.html
+++ b/daw/proUno/proDos.html
@@ -179,16 +179,41 @@
     <a name="2.4"></a>
     <h3 class="subTitulo_3">Operadores del lenguaje de programación</h3>
     <h4 class="subTitulo_4">Operadores aritméticos</h4>
-    <article>  
-      <ul>
-        <li>+ Suma aritmética de dos valores.</li>
-        <li>++ Incremento en 1 del operando.</li>
-        <li>- Resta aritmética de dos valores.</li>
-        <li>-- Decremento en 1 del operando.</li>
-        <li>* Multiplicación aritmética de dos valores.</li>
-        <li>/ División aritmética de dos valores.</li>
-        <li>% Obtiene el resto de la división entera.</li>
-      </ul>
+    <article> 
+      <table>
+        <tr>
+          <th>Operador</th>
+          <th>Descripción</th>
+        </tr>
+        <tr>
+          <td>+</td>
+          <td>Suma aritmética de dos valores</td>
+        </tr>
+        <tr>
+          <td>++</td>
+          <td>Incremento en 1 del operando</td>
+        </tr>
+        <tr>
+          <td>-</td>
+          <td>Resta aritmética de dos valores</td>
+        </tr>
+        <tr>
+          <td>--</td>
+          <td>Decremento en 1 del operando</td>
+        </tr>
+        <tr>
+          <td>*</td>
+          <td>Multiplicación aritmética de dos valores</td>
+        </tr>
+        <tr>
+          <td>/</td>
+          <td>División aritmética de dos valores</td>
+        </tr>
+        <tr>
+          <td>%</td>
+          <td>Obtiene el resto de la división entera</td>
+        </tr>
+      </table> 
     <article>
       <p>El <b>operador de incremento ++</b> puede ser aplicado como prefijo o sufijo de una variable. Sucede lo mismo con el operador decremento --.</p>
       <p>La prioridad de los operadores (de mayor a menor):</p>
@@ -203,14 +228,36 @@
     </article>
     <h4 class="subTitulo_4">Operadores booleanos</h4>
     <article>
-      <ul>
-        <li>& AND lógico. Evalúa ambos operandos.</li>
-        <li>&& AND lógico. Evalúa el operando derecho solo si es necesario.</li>
-        <li>| OR lógico. Evalúa ambos operandos.</li>
-        <li>|| OR lógico. Evalúa el operando derecho solo si es necesario.</li>
-        <li>^ XOR lógico.</li>
-        <li>! Negación lógica.</li>
-      </ul>
+      <table>
+        <tr>
+          <th>Operador</th>
+          <th>Descripción</th>
+        </tr>
+        <tr>
+          <td>&</td>
+          <td>AND lógico. Evalúa ambos operandos</td>
+        </tr>
+        <tr>
+          <td>&&</td>
+          <td>AND lógico. Evalúa el operando derecho solo si es necesario</td>
+        </tr>
+        <tr>
+          <td>|</td>
+          <td>OR lógico. Evalúa ambos operandos</td>
+        </tr>
+        <tr>
+          <td>||</td>
+          <td>OR lógico. Evalúe el operando derecho solo si es necesario</td>
+        </tr>
+        <tr>
+          <td>^</td>
+          <td>XOR lógico</td>
+        </tr>
+        <tr>
+          <td>!</td>
+          <td>Negación lógica</td>
+        </tr>
+      </table>
     </article>
     <article>
       <p>El operador <b>AND lógico &</b> calcula el resultado de a & b es true si a y b se evalúan como true. Si no, el resultado es false.</p>
@@ -255,7 +302,10 @@
     <h4 class="subTitulo_4">Operadores de comparación e igualdad</h4>
     <article>
       <table>
-        <caption>Operadores de comparación</caption>
+        <tr>
+          <th>Operador</th>
+          <th>Descripción</th>
+        </tr>
         <tr>
           <td>></td>
           <td>Mayor</td>
