--- a/daw/proUno/proTres.html
+++ b/daw/proUno/proTres.html
@@ -198,11 +198,11 @@
             Entre sus propiedades podemos destacar que son indivisibles, tienen existencia propia y permiten operadores relacionales. Se utilizan sin necesidad de ser definidos previamente:
           </p>
           <ul>
-            <li><b>Natural:</b> números naturales (N) -> byte, uint, ushort, ulong.</li>
-            <li><b>Entero:</b> números enteros (Z) -> sbyte, int, long, short.</li>
-            <li><b>Real:</b> números reales (R) -> decimal, float, double.</li>
-            <li><b>Carácter:</b> caracteres (C) -> char.</li>
-            <li><b>Lógico:</b> booleanos (B) -> bool.</li>
+            <li><b>Natural:</b> números naturales (N) = byte, uint, ushort, ulong.</li>
+            <li><b>Entero:</b> números enteros (Z) = sbyte, int, long, short.</li>
+            <li><b>Real:</b> números reales (R) = decimal, float, double.</li>
+            <li><b>Carácter:</b> caracteres (C) = char.</li>
+            <li><b>Lógico:</b> booleanos (B) = bool.</li>
           </ul>
         </li>
         <li>
@@ -275,26 +275,15 @@
     </article>
     <article>
       <h4 class="subTitulo_4">Operadores lógicos</h4>
-      <ul>
-        <li>
-          <b>&&</b>
-          <p>
-            <b>AND:</b> ambas condiciones deben cumplirse para entrar en el bloque IF. No evalúa el operando derecho si el izquierdo es false.
-          </p>
-        </li>
-        <li>
-          <b>||</b>
-          <p>
-            <b>OR:</b> es suficiente con que una de las condiciones se cumpla para entrar en el bloque IF. El resultado de x || y es true si x o y es true.
-          </p>
-        </li>
-        <li>
-          <b>^</b>
-          <p>
-            <b>XOR:</b> el resultado se evalúa como true si una condición se evalúa como false y otra como true. Si ambas condiciones se evalúan como false o como true, el resultado será false.
-          </p>
-        </li>
-      </ul>
+      <p>
+        <b>&&</b> - <b>AND:</b> ambas condiciones deben cumplirse para entrar en el bloque IF. No evalúa el operando derecho si el izquierdo es false.
+      </p>
+      <p>
+        <b>||</b> - <b>OR:</b> es suficiente con que una de las condiciones se cumpla para entrar en el bloque IF. El resultado de x || y es true si x o y es true.
+      </p>
+      <p>
+        <b>^</b> - <b>XOR:</b> el resultado se evalúa como true si una condición se evalúa como false y otra como true. Si ambas condiciones se evalúan como false o como true, el resultado será false.
+      </p>
       <p>
         <pre>
           <code>
