--- a/daw/proUno/programUno.html
+++ b/daw/proUno/programUno.html
@@ -45,6 +45,7 @@
   <section> <!-- INTRO -->
     <h3 class="subTitulo_3">Introducción</h3>
     <article>
+      <p id="demo"></p>
       <p>
         Un programa es un conjunto de instrucciones dadas al ordenador
         en un lenguaje que solo es entendible por él para
@@ -235,5 +236,6 @@
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
   </div> <!-- FIN CONTENEDOR -->
+  <script src="../../scripts/scripts.js"></script>
 </body>
 </html>
