--- a/daw/proUno/proDos.html
+++ b/daw/proUno/proDos.html
@@ -75,11 +75,30 @@
         <li><b>Write()</b> escribe un valor o valores especificados en el flujo de salida estándar.</li>
         <li><b>WriteLine()</b> escribe un valor o valores especificado y se realiza un salto de línea en nuestra consola.</li>
       </ul>
+      <p>
+        <pre>
+          <code>
+            vidas = vidas - 1;
+              if (vidas == 0)
+                {
+                  Console.WriteLine("Game Over");
+                  finPartida();
+                }
+          </code>
+        </pre>
+      </p>
     </article>
     <article>
       <p>Para la entrada de datos, utilizaremos el método <b>ReadLine()</b>. Este leerá el dato introducido por el usuario y devolverá un dato de tipo cadena (string).</p>
       <p>Otro método es <b>Read()</b>, que leerá el dato introducido y devolverá un dato tipo entero (int).</p>
       <p>También podemos utilizar <b>ReadKey()</b>, aquí se obtiene el carácter presionado por el usuario y se muestra esta tecla por la pantalla.</p>
+      <p>
+        <pre>
+          <code>
+            Ejemplo Read() y ReadLine()
+          </code>
+        </pre>
+      </p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
