--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         </div>
         <div class="card">
           <a href="./daw/proUno/programUno.html">
+            <div class="imgCard">
+              <img src="img/logo_C#.png" alt="logo_C#">
+            </div>
             <div class="descripcionCard">
               <h3>Programación I</h3>
             </div>
