--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="card">
           <a href="./daw/proUno/programUno.html">
             <div class="imgCard">
-              <img src="img/logo_C#.png" alt="logo_C#">
+              <img src="./img/logoCsharp.png">
             </div>
             <div class="descripcionCard">
               <h3>Programación I</h3>
