--- a/index.html
+++ b/index.html
@@ -21,17 +21,20 @@
         <div class="card">
           <a href="./daw/sistemas/sistemInfor.html">
             <div class="descripcionCard">
-                <h3>Sistemas Informáticos</h3>
+                <h4>Sistemas Informáticos</h4>
+                <p>Un sistema informático (SI) es un sistema que permite almacenar y procesar información; es el conjunto de partes interrelacionadas: hardware, software y personal informático.</p>
             </div>
           </a>
         </div>
         <div class="card">
           <a href="./daw/proUno/programUno.html">
             <div class="imgCard">
-              <img src="./img/logoCsharp.png">
+              <!--<img src="./img/logoCsharp.png">-->
             </div>
             <div class="descripcionCard">
-              <h3>Programación I</h3>
+              <h4>Programación I</h4>
+              <h5>Lenguaje C#</h5>
+              <p>C# es un lenguaje de programación multiparadigma desarrollado y estandarizado por Microsoft como parte de su plataforma .NET. Su sintaxis básica deriva de C/C++ y utiliza el modelo de objetos de la plataforma .NET.</p>
             </div>
           </a>
         </div>
