--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         <!----------------------------------------->
         <a href="">
           <div class="card">
+          <div class="desactivada">
             <div class="tituloCard"><strong>Bases de Datos II</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
@@ -81,6 +82,7 @@
               </p>
             </div>
             <div class="footerCard"><span>FooterCard</span></div>
+          </div>
           </div>
         </a>
         <!----------------------------------------->
