--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
         <!----------------------------------------->
         <a href="">
           <div class="card">
+          <div class="desactivada">
             <div class="tituloCard"><strong>Entornos de Desarrollo</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
@@ -110,10 +111,12 @@
             </div>
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
+          </div>
         </a>
         <!----------------------------------------->
         <a href="">
           <div class="card">
+          <div class="desactivada">
             <div class="tituloCard"><strong>Formación y Orientación Laboral</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
@@ -123,10 +126,12 @@
             </div>
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
+          </div>
         </a>
         <!----------------------------------------->
         <a href="">
           <div class="card">
+          <div class="desactivada">
             <div class="tituloCard"><strong>Desarrollo Web I</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
@@ -136,10 +141,12 @@
             </div>
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
+          </div>
         </a>
         <!----------------------------------------->
         <a href="">
           <div class="card">
+          <div class="desactivada">
             <div class="tituloCard"><strong>Desarrollo Web II</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
@@ -149,10 +156,12 @@
             </div>
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
+          </div>
         </a>
         <!----------------------------------------->
         <a href="">
           <div class="card">
+          <div class="desactivada">
             <div class="tituloCard"><strong>Despliegue de Aplicaciones Web</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
@@ -162,10 +171,12 @@
             </div>
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
+          </div>
         </a>
         <!----------------------------------------->
         <a href="">
           <div class="card">
+          <div class="desactivada">
             <div class="tituloCard"><strong>Diseño de Interfaces Web</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
@@ -175,10 +186,12 @@
             </div>
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
+          </div>
         </a>
         <!----------------------------------------->
         <a href="">
           <div class="card">
+          <div class="desactivada">
             <div class="tituloCard"><strong>Empresa e Iniciativa Emprendedora</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
@@ -187,6 +200,7 @@
               </p>
             </div>
             <div class="footerCard"><span>FooterCard</span></div>
+          </div>
           </div>
         </a>
       </section>
