--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <a href="">
           <div class="card">
           <div class="desactivada">
-            <div class="tituloCard"><strong>Formación y Orientación Laboral</strong></div>
+            <div class="tituloCard"><strong>FOL</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
               <p>
@@ -162,7 +162,7 @@
         <a href="">
           <div class="card">
           <div class="desactivada">
-            <div class="tituloCard"><strong>Despliegue de Aplicaciones Web</strong></div>
+            <div class="tituloCard"><strong>Despliegue de App Web</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
               <p>
@@ -177,7 +177,7 @@
         <a href="">
           <div class="card">
           <div class="desactivada">
-            <div class="tituloCard"><strong>Diseño de Interfaces Web</strong></div>
+            <div class="tituloCard"><strong>Diseño de Interfaces</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
               <p>
@@ -192,7 +192,7 @@
         <a href="">
           <div class="card">
           <div class="desactivada">
-            <div class="tituloCard"><strong>Empresa e Iniciativa Emprendedora</strong></div>
+            <div class="tituloCard"><strong>Empresa</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
               <p>
