--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <img src="" alt="">
             <div class="descripcionCard">
               <p>
-                
+                PRUEBA
               </p>
             </div>
             <div class="footerCard"><span>FooterCard</span></div>
