--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
         </a>
         <!----------------------------------------->
         <a href="">
-          <div class="card">
-          <div class="desactivada">
+          <div class="card desactivada">
             <div class="tituloCard"><strong>Bases de Datos II</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
@@ -82,7 +81,6 @@
               </p>
             </div>
             <div class="footerCard"><span>FooterCard</span></div>
-          </div>
           </div>
         </a>
         <!----------------------------------------->
