--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
         </a>
         <!----------------------------------------->
         <a href="">
-          <div class="card">
-          <div class="desactivada">
+          <div class="card desactivada">
             <div class="tituloCard"><strong>Entornos de Desarrollo</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
@@ -109,12 +108,10 @@
             </div>
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
-          </div>
         </a>
         <!----------------------------------------->
         <a href="">
-          <div class="card">
-          <div class="desactivada">
+          <div class="card desactivada">
             <div class="tituloCard"><strong>FOL</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
@@ -124,12 +121,10 @@
             </div>
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
-          </div>
         </a>
         <!----------------------------------------->
         <a href="">
-          <div class="card">
-          <div class="desactivada">
+          <div class="card desactivada">
             <div class="tituloCard"><strong>Desarrollo Web I</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
@@ -139,12 +134,10 @@
             </div>
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
-          </div>
         </a>
         <!----------------------------------------->
         <a href="">
-          <div class="card">
-          <div class="desactivada">
+          <div class="card desactivada">
             <div class="tituloCard"><strong>Desarrollo Web II</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
@@ -154,12 +147,10 @@
             </div>
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
-          </div>
         </a>
         <!----------------------------------------->
         <a href="">
-          <div class="card">
-          <div class="desactivada">
+          <div class="card desactivada">
             <div class="tituloCard"><strong>Despliegue de App Web</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
@@ -169,12 +160,10 @@
             </div>
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
-          </div>
         </a>
         <!----------------------------------------->
         <a href="">
-          <div class="card">
-          <div class="desactivada">
+          <div class="card desactivada">
             <div class="tituloCard"><strong>Diseño de Interfaces</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
@@ -184,12 +173,10 @@
             </div>
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
-          </div>
         </a>
         <!----------------------------------------->
         <a href="">
-          <div class="card">
-          <div class="desactivada">
+          <div class="card desactivada">
             <div class="tituloCard"><strong>Empresa</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
@@ -198,7 +185,6 @@
               </p>
             </div>
             <div class="footerCard"><span>FooterCard</span></div>
-          </div>
           </div>
         </a>
       </section>
