--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <!----------------------------------------->
         <a href="">
           <div class="card desactivada">
-            <div class="tituloCard"><strong>FOL</strong></div>
+            <div class="tituloCard"><strong>Formación y Orientación Laboral</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
               <p>
