--- a/index.html
+++ b/index.html
@@ -72,19 +72,6 @@
         </a>
         <!----------------------------------------->
         <a href="">
-          <div class="card desactivada">
-            <div class="tituloCard"><strong>Bases de Datos II</strong></div>
-            <img src="" alt="">
-            <div class="descripcionCard">
-              <p>
-                
-              </p>
-            </div>
-            <div class="footerCard"><span>FooterCard</span></div>
-          </div>
-        </a>
-        <!----------------------------------------->
-        <a href="">
           <div class="card">
             <div class="tituloCard"><strong>Lenguajes de Marcas</strong></div>
             <img src="" alt="">
@@ -96,9 +83,22 @@
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
         </a>
-        <!----------------------------------------->
+        <!-----------------------------------------
         <a href="">
-          <div class="card desactivada">
+          <div class="card">
+            <div class="tituloCard"><strong>Bases de Datos II</strong></div>
+            <img src="" alt="">
+            <div class="descripcionCard">
+              <p>
+                
+              </p>
+            </div>
+            <div class="footerCard"><span>FooterCard</span></div>
+          </div>
+        </a>
+        -----------------------------------------
+        <a href="">
+          <div class="card">
             <div class="tituloCard"><strong>Entornos de Desarrollo</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
@@ -109,9 +109,9 @@
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
         </a>
-        <!----------------------------------------->
+        -----------------------------------------
         <a href="">
-          <div class="card desactivada">
+          <div class="card">
             <div class="tituloCard"><strong>FOL</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
@@ -122,9 +122,9 @@
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
         </a>
-        <!----------------------------------------->
+        -----------------------------------------
         <a href="">
-          <div class="card desactivada">
+          <div class="card">
             <div class="tituloCard"><strong>Desarrollo Web I</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
@@ -135,9 +135,9 @@
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
         </a>
-        <!----------------------------------------->
+        -----------------------------------------
         <a href="">
-          <div class="card desactivada">
+          <div class="card">
             <div class="tituloCard"><strong>Desarrollo Web II</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
@@ -148,9 +148,9 @@
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
         </a>
-        <!----------------------------------------->
+        -----------------------------------------
         <a href="">
-          <div class="card desactivada">
+          <div class="card">
             <div class="tituloCard"><strong>Despliegue de App Web</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
@@ -161,9 +161,9 @@
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
         </a>
-        <!----------------------------------------->
+        -----------------------------------------
         <a href="">
-          <div class="card desactivada">
+          <div class="card">
             <div class="tituloCard"><strong>Diseño de Interfaces</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
@@ -174,9 +174,9 @@
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
         </a>
-        <!----------------------------------------->
+        -----------------------------------------
         <a href="">
-          <div class="card desactivada">
+          <div class="card">
             <div class="tituloCard"><strong>Empresa</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
