--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <section class="daw">
         <!----------------------------------------->
         <a href="./daw/sistemas/sistemInfor.html">
-          <div class="card">
+          <div class="card sombra">
             <div class="tituloCard"><strong>Sistemas Informáticos</strong></div>
             <img src="" alt="">
             <div class="descripcionCard">
