--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </a>
         <!----------------------------------------->
         <a href="./daw/proUno/programUno.html">
+          <div class="sombra">
           <div class="card">
             <div class="tituloCard"><strong>Programación I</strong></div>
             <img src="" alt="">
@@ -42,6 +43,7 @@
               </p>
             </div>
             <div class="footerCard"><span>FooterCard</span></div>
+          </div>
           </div>
         </a>
         <!----------------------------------------->
