--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="card">
             <div class="tituloCard"><strong>Programación II</strong></div>
             <img src="" alt="">
-            <div class="descripcionCard">
+            <div class="descripcionCard sombra">
               <p>
                 
               </p>
