--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
         </a>
         <!----------------------------------------->
         <a href="./daw/proUno/programUno.html">
-          <div class="sombra">
           <div class="card">
             <div class="tituloCard"><strong>Programación I</strong></div>
             <img src="" alt="">
@@ -44,14 +43,13 @@
             </div>
             <div class="footerCard"><span>FooterCard</span></div>
           </div>
-          </div>
         </a>
         <!----------------------------------------->
         <a href="">
         <div class="card">
             <div class="tituloCard"><strong>Programación II</strong></div>
             <img src="" alt="">
-            <div class="descripcionCard sombra">
+            <div class="descripcionCard">
               <p>
                 
               </p>
