--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="./daw/sistemas/sistemInfor.html">
           <div class="card sombra">
             <div class="tituloCard"><strong>Sistemas Informáticos</strong></div>
-            <img src="" alt="">
+            <img src="./img/logoCsharp.png" alt="">
             <div class="descripcionCard">
               <p>
                 Un sistema informático (SI) es un sistema que permite almacenar y procesar información; es el conjunto de partes interrelacionadas: hardware, software y personal informático.
