--- a/daw/sistemas/sistemInfor.html
+++ b/daw/sistemas/sistemInfor.html
@@ -34,7 +34,13 @@
   <!--*************************************************************-->
   <div class="contenedor">
     <aside>
-      
+      <ol>
+        <li>Tema 1</li>
+        <li>Tema 2</li>
+        <li>Tema 3</li>
+        <li>Tema 4</li>
+        <li>Tema 5</li>
+      </ol>
     </aside>
     <section>
       <section>
