--- a/daw/sistemas/sistemInfor.html
+++ b/daw/sistemas/sistemInfor.html
@@ -36,6 +36,7 @@
     <aside>
       <ol>
         <li>Tema 1</li>
+          <!--menu de apartados hover-->
         <li>Tema 2</li>
         <li>Tema 3</li>
         <li>Tema 4</li>
