--- a/daw/sistemas/sistemInfor.html
+++ b/daw/sistemas/sistemInfor.html
@@ -35,12 +35,12 @@
   <div class="contenedor">
     <aside>
       <ol>
-        <li>Tema 1</li>
+        <li>Tema</li>
           <!--menu de apartados hover-->
-        <li>Tema 2</li>
-        <li>Tema 3</li>
-        <li>Tema 4</li>
-        <li>Tema 5</li>
+        <li>Tema</li>
+        <li>Tema</li>
+        <li>Tema</li>
+        <li>Tema</li>
       </ol>
     </aside>
     <section>
