--- a/daw/sistemas/sistemInfor.html
+++ b/daw/sistemas/sistemInfor.html
@@ -19,6 +19,29 @@
       <span>Sistemas Informáticos</span>
       <span><a href="../../index.html">Principal</a></span>
     </div>
+    <div class="indice">
+      <a name="indice"></a>
+      <ol>
+        <li><a href="#1.1">Estructura y componentes de un sistema informático. Periféricos y adaptadores para la conexion de dispositivos</a></li>
+        <li><a href="#1.2">Tipos y topologías de red</a></li>
+        <li><a href="#1.3">Mapa físico y lógico de una red</a></li>
+        <li><a href="#1.4">Arquitectura de un sitema operativo</a></li>
+        <li><a href="#1.5">Funciones del sistema operativo</a></li>
+        <li><a href="#1.6">Tipos de sistemas operativos</a></li>
+        <li><a href="#1.7">Tipos de aplicaciones</a></li>
+        <li><a href="#1.8">Licencias y tipos de licencias</a></li>
+        <li><a href="#1.9">Gestores de arranque</a></li>
+        <li><a href="#1.10">Máquinas virtuales</a></li>
+        <li><a href="#1.11">Consideraciones previas a la instalación de sistemas operativos libres y propietarios</a></li>
+        <li><a href="#1.12">Instalación de sistemas operativos. Requisitos, versiones y licencias</a></li>
+        <li><a href="#1.13">Instalación y desinstalación de aplicaciones. Requisitos, versiones y licencias</a></li>
+        <li><a href="#1.14">Actualización de sistemas operativos y aplicaciones</a></li>
+        <li><a href="#1.15">Archivos de inicio de sistemas operativos</a></li>
+        <li><a href="#1.16">Registro del sistema</a></li>
+        <li><a href="#1.17">Actualización y mantenimiento de controladores de dispositivos</a></li>
+      </ol>
+    </div>
+    <!--
     <div class="menuPrincipalAsignatura">
       <a href="./sistemInfor.html">Tema 1</a>
       <a href="./temaDos.html">Tema 2</a>
@@ -27,6 +50,7 @@
       <a href="./temaCinco.html">Tema 5</a>
       <a href="./temaSeis.html">Tema 6</a>
     </div>
+    -->
     <div class="tituloTema">
       <h1>Tema 1.- Instalación software libre y propietario</h1>
     </div>
@@ -45,28 +69,7 @@
     </aside>
     <section>
       <section>
-        <div class="indice">
-          <a name="indice"></a>
-          <ol>
-            <li><a href="#1.1">Estructura y componentes de un sistema informático. Periféricos y adaptadores para la conexion de dispositivos</a></li>
-            <li><a href="#1.2">Tipos y topologías de red</a></li>
-            <li><a href="#1.3">Mapa físico y lógico de una red</a></li>
-            <li><a href="#1.4">Arquitectura de un sitema operativo</a></li>
-            <li><a href="#1.5">Funciones del sistema operativo</a></li>
-            <li><a href="#1.6">Tipos de sistemas operativos</a></li>
-            <li><a href="#1.7">Tipos de aplicaciones</a></li>
-            <li><a href="#1.8">Licencias y tipos de licencias</a></li>
-            <li><a href="#1.9">Gestores de arranque</a></li>
-            <li><a href="#1.10">Máquinas virtuales</a></li>
-            <li><a href="#1.11">Consideraciones previas a la instalación de sistemas operativos libres y propietarios</a></li>
-            <li><a href="#1.12">Instalación de sistemas operativos. Requisitos, versiones y licencias</a></li>
-            <li><a href="#1.13">Instalación y desinstalación de aplicaciones. Requisitos, versiones y licencias</a></li>
-            <li><a href="#1.14">Actualización de sistemas operativos y aplicaciones</a></li>
-            <li><a href="#1.15">Archivos de inicio de sistemas operativos</a></li>
-            <li><a href="#1.16">Registro del sistema</a></li>
-            <li><a href="#1.17">Actualización y mantenimiento de controladores de dispositivos</a></li>
-          </ol>
-        </div>
+        <!-- Indice -->
       </section>
       <!--*************************************************************-->
       <section>
