--- a/daw/sistemas/sistemInfor.html
+++ b/daw/sistemas/sistemInfor.html
@@ -59,14 +59,19 @@
   <!--*************************************************************-->
   <div class="contenedor">
     <aside>
-      <ol>
-        <li>Tema</li>
+      <ul class="menuAside">
+        <li class="desplegableLi">Tema</li>
           <!--menu de apartados hover-->
+          <ul class="desplegable">
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
         <li>Tema</li>
         <li>Tema</li>
         <li>Tema</li>
         <li>Tema</li>
-      </ol>
+        </ul>
     </aside>
     <section>
       <section>
