--- a/daw/sistemas/sistemInfor.html
+++ b/daw/sistemas/sistemInfor.html
@@ -60,13 +60,14 @@
   <div class="contenedor">
     <aside>
       <ul class="menuAside">
-        <li class="desplegableLi">Tema</li>
+        <li class="desplegableLi">Tema
           <!--menu de apartados hover-->
           <ul class="desplegable">
             <li>Item</li>
             <li>Item</li>
             <li>Item</li>
           </ul>
+        </li>
         <li>Tema</li>
         <li>Tema</li>
         <li>Tema</li>
