--- a/daw/sistemas/sistemInfor.html
+++ b/daw/sistemas/sistemInfor.html
@@ -16,6 +16,22 @@
     <a name="top"></a>
     <div class="navtop">
       <span>Sistemas Informáticos</span>
+      <!--NUEVO MENU-->
+      <nav>
+        <ul class="navHorizontal">
+          <li>
+            <a href="../../index.html">Principal</a>
+            <ul class="navVertical">
+              <li><a href="./sistemInfor.html">Tema 1</a></li>
+              <li><a href="./temaDos.html">Tema 2</a></li>
+              <li><a href="./temaTres.html">Tema 3</a></li>
+              <li><a href="./temaCuatro.html">Tema 4</a></li>
+              <li><a href="./temaCinco.html">Tema 5</a></li>
+              <li><a href="./temaSeis.html">Tema 6</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
       <span><a href="../../index.html">Principal</a></span>
     </div>
     <!--
